switch to token implementation
