# config/routes.rb
@@ -5,23 +5,16 @@ Rails.application.routes.draw do
   get 'chat_rooms_for_user/:user_id', to: 'chat_rooms#chat_rooms_for_user'
   get 'chat_rooms_with_messages/:id', to: 'chat_rooms#show_with_messages'
   
-  get    '/login',   to: 'sessions#new'
-  post   '/login',   to: 'sessions#create'
-  delete '/logout',  to: 'sessions#destroy'
+  post '/login',  to: 'tokens#create'  # notice change here
 
-
-  Rails.application.routes.draw do
-    resources :users
-    resources :chat_rooms
-    resources :chat_room_users
-    resources :messages
-    resources :articles
-    resources :articles do
-      collection do
-        get 'by_user_group/:user_group', to: 'articles#by_user_group'
-      end
+  resources :users
+  resources :chat_rooms
+  resources :chat_room_users
+  resources :messages
+  resources :articles do
+    collection do
+      get 'by_user_group/:user_group', to: 'articles#by_user_group'
     end
-    # For details on the DSL available within this file, see https://guides.rubyonrails.org/routing.html
   end
-  
+  # For details on the DSL available within this file, see https://guides.rubyonrails.org/routing.html
 end
